# readFile

./: .gitignore  CMakeLists.txt  CSimpleReader.hpp  main.cpp
